--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,6 +10,7 @@
 
 .partnership {
   width: 60vw !important;
+  transform: translateX(-42%) translateY(-10px) !important;
 }
 
 .advisory-councel {
